# cp-project

./: .gitignore  README.md  REPORT.md  pyproject.toml  run.sbatch
conf/: config.yaml
conf/compute/: local.yaml  slurm.yaml
conf/data/: natural_stories.yaml
conf/model/: bert.yaml  gpt2.yaml
conf/regression/: lasso.yaml  mlp.yaml  ridge.yaml
data/annotations/: ambiguity_regions.tsv  syntactic_regions.tsv
scripts/: download_data.py  extract_features.py  layerwise_analysis.py  train_regression.py
slurm/: run.sbatch
src/: utils.py
src/data/: __init__.py  natural_stories.py
src/features/: __init__.py  extract.py
src/models/: __init__.py  regression.py
