[project]
name = "cp-project"
version = "0.1.0"
description = "Predicting Human Reading Times: Causal vs. Masked Language Models on Syntactic Ambiguity"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "tokenizers>=0.15",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "tqdm>=4.65",
    "requests>=2.31",
    "pyarrow>=14.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
